@@ -25,6 +25,7 @@ REDHAT_BUGZILLA=1002279,1093336
   + ManageFile: New function: MANAGE_FILE_EXPIRY
   + ManageMessage: New function: M_OUT
   + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
+  + ManageString: New function: STRING_ESCAPE_BACKSLASH
   + ManageString: New function: STRING_ESCAPE_DOLLAR
   + ManageString: New function: STRING_ESCAPE_QUOTE
   + Target rpmlint: rpmlint statistics are now combined.
@@ -43,5 +44,7 @@ REDHAT_BUGZILLA=1002279,1093336
     - PRJ_RPM_SPEC_FILE
 
 - Changed:
+  + ManageString: Macro to function: STRING_ESCAPE_SEMICOLON
+  + ManageDependency: Macro to function: MANAGE_DEPENDENCY
   + PRJ_DOC_DIR: Changed from docdir/<PRJ_NAME>-<PRJ_VER> 
     to docdir/<PRJ_NAME>
